--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email: rahmanzr@gmail.com
 github: windsorbrown # username
 twitter: rahmanzr78
 linkedin: zishanrahman
-stackoverflow: windsorbrown  #e.g: users/2735833/proton1h1
+stackoverflow: users/6175432/windsorbrown  #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus 
 #disqus: username
 google_analytics: UA-77403043-1
