--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # top level stuff you probably don't need to touch
-highlighter: rogue
+#highlighter: rogue
 # markdown: rdiscount
 # rdiscount:
 #   extensions: [smart]
