--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,35 @@
-# top level stuff you probably don't need to touch
-#highlighter: rogue
-# markdown: rdiscount
-# rdiscount:
-#   extensions: [smart]
+highlighter: pygments
+markdown: rdiscount
+rdiscount:
+  extensions: [smart]
 permalink: /:title.html
 paginate: 5
 gems: [jekyll-paginate]
-port: 3000
+port: 4000
 safe: true
+url: http://biomadeira.github.io/vitae
+author: Fábio Madeira
 
-
-# edit here to achieve your personal greatness
-url: http://about.rahmanzr.com/
-baseurl: /
-title: Zishan Rahman
-author: Zishan Rahman
-description: Personal blog and resume
-avatar: profile.png
-email: rahmanzr@gmail.com
-github: windsorbrown # username
-twitter: rahmanzr78
-linkedin: zishanrahman
-stackoverflow: users/6175432/windsorbrown  #e.g: users/2735833/proton1h1
-#Comment out if you don't want disqus 
-#disqus: username
-google_analytics: UA-77403043-1
-
-
-# needed for travis-ci build
-#exclude: [vendor]
-
-tel: +1 604 5374130
-#//tel_full: tel:+440000000000
-google_maps: 'https://www.google.ca/maps/place/2502-1055+Homer+St,+Vancouver,+V6B+1G3'
-address: 2502-1055 Homer St.
-postcode: V6B 1G3
-city: Vancouver
-country: Canada
-
+# edit this section with your information
+# biomadeira.github.io - all contents run on /vitae/
+# for a normal use at the base of the server change it to "/"
+baseurl: /vitae/
+title: Chris Turner's Resume
+name: Chris Turner
+email: christurner@me.com
+email_full: mailto:youremail@me.com
+website: github.io/sustain
+website_full: https://biomadeira.github.io/sustain
+github: trending
+twitter: twitter
+tel: +44 0000 000000
+tel_full: tel:+440000000000
+google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+address: 44 Perth Street
+postcode: EH3 5BL
+city: Edinburgh
+country: United Kingdom
+google_analytics: UA-69300817-1
 
 # needed for travis-ci build
 exclude: [vendor]
